# fbinter

./: .gitignore  CMakeLists.txt  README.md  fbfun.kdev4  fbinter.kdev4  flake.nix
.cache/clangd/index/: 3d.h.A1EA41AAC1B8AEB0.idx  colfun.h.4C61802CEAAFA24D.idx  curve.h.FFAA1FFFFD808C63.idx  drm_plug.h.A24B1A8049052693.idx  drm_util.h.85B93D8FEF52D32B.idx  example_3param.c.D12187C23448BFDD.idx  example_cube.c.DEA5E822111D35B8.idx  example_cube_2.c.474714500A68C8AA.idx  example_discs.c.1268E1A0C70AF2F8.idx  example_drm.c.2DBC270484747F60.idx  example_param.c.B0C092B505C1FF57.idx  geom.h.73E3F40610676708.idx  global.h.4BEA1A61324DA8F2.idx  points.h.CB2F6D74C0E6E0BF.idx  render.h.CE036E15F761A9CC.idx
.kdev4/: fbfun.kdev4  fbinter.kdev4
examples/: example_3param.c  example_cube.c  example_cube_2.c  example_demo_video.c  example_discs.c  example_drm.c  example_hyper.c  example_hyper_inf.c  example_param.c  example_tetra.c
include/: 3d.h  colfun.h  curve.h  drm_plug.h  drm_util.h  geom.h  global.h  points.h  render.h
src/: .main.c.kate-swp  3d.c  colfun.c  curve.c  drm_plug.c  drm_util.c  example_3param.c  example_cube.c  example_drm.c  example_param.c  geom.c  global.c  main.c  points.c  render.c
